--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,7 @@
         </div>
       </footer>
   </div>
+  <script type="text/javascript" src="dist/purify.min.js"></script>
 </body>
 
 </html>
