--- a/events.html
+++ b/events.html
@@ -92,5 +92,6 @@
             </div>
         </footer>
     </div>
+    <script type="text/javascript" src="dist/purify.min.js"></script>
 </body>
 </html>
