added website link

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             Please email us with any questions or inquiries! The Web Dev Club
             would love to partner with outside organizations and industry
             professionals. <br /><br />
-            webdevclubuvu@gmail.com
+           <a href="mailto:webdevclubuvu@gmail.com">webdevclubuvu@gmail.com</a>
           </p>
           <div class="main__iconsDiv">
             <div class="main__iconWrapper">
