Updated Contact Page

--- a/contact.html
+++ b/contact.html
@@ -95,9 +95,9 @@
           <div class="main__councilDivInfo">
             webdevclub(council) { <br />
             &nbsp;&nbsp;&nbsp;council.president = "Hannah Armstrong"; <br />
-            &nbsp;&nbsp;&nbsp;council.vicepresident = "Savannah Hilton"; <br />
+            &nbsp;&nbsp;&nbsp;council.vicepresident = "Kayla Macias-Rivera"; <br />
             &nbsp;&nbsp;&nbsp;council.secretary = "Richard Foy"; <br />
-            &nbsp;&nbsp;&nbsp;council.treasurer = "Jacob Banuelos";<br />
+            &nbsp;&nbsp;&nbsp;council.treasurer = "Thomas Griffiths";<br />
             }
           </div>
         </div>
