changed presidents name

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
           <h2 class="main__councilH2">Council Members</h2>
           <div class="main__councilDivInfo">
             webdevclub(council) { <br />
-            &nbsp;&nbsp;&nbsp;council.president = "Hannah Armstrong"; <br />
+            &nbsp;&nbsp;&nbsp;council.president = "Jordan Perry"; <br />
             &nbsp;&nbsp;&nbsp;council.vicepresident = "Kayla Macias-Rivera"; <br />
             &nbsp;&nbsp;&nbsp;council.secretary = "Richard Foy"; <br />
             &nbsp;&nbsp;&nbsp;council.treasurer = "Thomas Griffiths";<br />
