--- a/events.html
+++ b/events.html
@@ -36,19 +36,16 @@
                 <img src="#" class="main__eventImage"> 
             </figure> -->
             <div class="main__upcomingEvent">
-                <h2 class="main__eventTitle">Website Eyetracking Test ~ 04/13/2022</h2>
-                <h3 class="main__eventTime">7-8pm ~  <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS410</a></h3>
-                <p class="main__eventDescription">We'll be going over the different ways to user test our clubs website, including breaking out some eyetracking software! </p>
+                <h2 class="main__eventTitle">Weekly Meetings ~ Every Friday</h2>
+                <h3 class="main__eventTime">5:30-6:30pm ~  <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS404</a></h3>
+                <p class="main__eventDescription">Come join us to socialize, work on projects and talk about everything web dev related! </p>
                 <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
             </div>
             <div class="main__upcomingEvent">
-                <h2 class="main__eventTitle">STEM Club Minecraft Party ~ 04/19/2022</h2>
-                <h3 class="main__eventTime">7-8pm ~  <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS404</a></h3>
-                <p class="main__eventDescription">Come join the Web Dev Club, Cyber Security Club, Computer Science Club and GirlsWhoCode for a minecraft tournament to celebrate the end of a great year! First person to kill the Enderdragon wins an Amazon Kindle Fire! </p>
+                <h2 class="main__eventTitle">Chase Adams ~ </h2>
+                <h3 class="main__eventTime">6-7pm ~ 10/28/2022<a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS404</a></h3>
+                <p class="main__eventDescription">Chase Adams is a UVU Alumni who graduated with a Bachelors degree in Marketing and then forged a career into web developement. He now works at Podium as Web Developer and is coming to the Web Dev Club to speak about his journey and experience.  </p>
                 <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
-                <figure class="main__eventFigure">
-                    <img class="main__eventImage" src="/images/stemclubminecraftparty.png" alt="Stem Club Minecraft Party">
-                </figure>
             </div>
         </div>
         <div class="main__calendarDiv"> <!--Embed Google Calendar, will make different calendar in future-->
