spelled development wrong again

--- a/events.html
+++ b/events.html
@@ -44,7 +44,7 @@
             <div class="main__upcomingEvent">
                 <h2 class="main__eventTitle">Chase Adams ~ 10/28/2022</h2>
                 <h3 class="main__eventTime">6-7pm ~ <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS404</a></h3>
-                <p class="main__eventDescription">Chase Adams is a UVU Alumni who graduated with a Bachelors degree in Marketing and then forged a career into web developement. He now works at Podium as Web Developer and is coming to the Web Dev Club to speak about his journey and experience.  </p>
+                <p class="main__eventDescription">Chase Adams is a UVU Alumni who graduated with a Bachelors degree in Marketing and then forged a career into web development. He now works at Podium as Web Developer and is coming to the Web Dev Club to speak about his journey and experience.  </p>
                 <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
             </div>
         </div>
