updated join button

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <button class="nav__joinButton">
               <a
                 class="nav__joinAnchor"
-                href="https://uvu.campuslabs.com/engage/organization/wdc"
+                href="https://uvu.campusgroups.com/WDC/club_signup"
                 target="_blank"
               >
                 JOIN</a
