--- a/events.html
+++ b/events.html
@@ -22,7 +22,7 @@
                     <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
                     <li class="nav__li"><a class="nav__anchor active" href="/events.html">Events</a></li>
                     <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
-                    <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> JOIN</a></button>
+                    <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campusgroups.com/WDC/club_signup" target="_blank"> JOIN</a></button>
                 </ul>
             </nav>
         </header>
