forgot to update homepage join button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="main__joinButtonDiv">
                 <div class="main__joinButtonWrapper2">
                     <div class="main__joinButtonWrapper1">
-                        <button class="main__joinButton"><a href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank">JOIN</a></button>
+                        <button class="main__joinButton"><a href="https://uvu.campusgroups.com/WDC/club_signup" target="_blank">JOIN</a></button>
                     </div>
                 </div>
             </div>
