our discord link was actually github for some reason

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="main__paragraphDiv">
                 <p class="main__paragraph">
                     &nbsp;&nbsp;&nbsp;In the Web Dev Club, aspiring Web Developers can learn new technologies, collaborate on student or club projects with fellow Web Developers and Designers, and participate in events such as hackathons and social events!<br>
-                    &nbsp;&nbsp;&nbsp;There are many ways to participate and contribute to the club while learning about website development. <a href="https://github.com/uvu-web-dev-club" target="_blank">Join our Discord</a> where we all hangout and talk shop!
+                    &nbsp;&nbsp;&nbsp;There are many ways to participate and contribute to the club while learning about website development. <a href="https://discord.gg/VC8yUwK7fe" target="_blank">Join our Discord</a> where we all hangout and talk shop!
                 
                 </p>
             </div>
