Added my name to the contact page

--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,7 @@
             &nbsp;&nbsp;&nbsp;council.vicepresident = "Kayla Macias-Rivera"; <br />
             &nbsp;&nbsp;&nbsp;council.secretary = "Richard Foy"; <br />
             &nbsp;&nbsp;&nbsp;council.treasurer = "Thomas Griffiths";<br />
+            &nbsp;&nbsp;&nbsp;council.clubrepresentative = "Hannah Armstrong";<br />
             }
           </div>
         </div>
